--- a/argument.yml
+++ b/argument.yml
@@ -1,15 +1,15 @@
 depth_edge_model_ckpt: checkpoints/edge-model.pth
 depth_feat_model_ckpt: checkpoints/depth-model.pth
 rgb_feat_model_ckpt: checkpoints/color-model.pth
-MiDaS_model_ckpt: MiDaS/model.pt
+MiDaS_model_ckpt: MiDaS/model-f46da743.pt
 use_boostmonodepth: True
-fps: 40
-num_frames: 240
-x_shift_range: [0.00, 0.00, -0.015, -0.015]
-y_shift_range: [0.00, 0.00, -0.015, -0.00]
-z_shift_range: [-0.05, -0.05, -0.05, -0.05]
-traj_types: ['double-straight-line', 'double-straight-line', 'circle', 'circle']
-video_postfix: ['dolly-zoom-in', 'zoom-in', 'circle', 'swing']
+fps: 24
+num_frames: 72
+x_shift_range: [0.0]
+y_shift_range: [0.015]
+z_shift_range: [-0.05]
+traj_types: [double-straight-line]
+video_postfix: [zoom-in]
 specific: ''
 longer_side_len: 960
 src_folder: image
@@ -17,7 +17,7 @@ depth_folder: depth
 mesh_folder: mesh
 video_folder: video
 load_ply: False
-save_ply: True
+save_ply: False
 inference_video: True
 gpu_ids: 0
 offscreen_rendering: False
